integration tests intermediate